git-svn-id: https://plugins.svn.wordpress.org/advanced-access-manager/trunk@541133 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/view/html/reference.html
+++ b/view/html/reference.html
@@ -156,6 +156,7 @@
         <p><span style="color: #00BFFF">[aam]</span><br/><br/>delete_capabilities = <span style="color: #BF4000">"false"</span></p>
     </div>
     <div class="error-reporting">
+        <p>Deprecated and Removed in release 1.6.5.1 (Beta)</p>
         <p>Use Advanced Access Manager error reporting feature and log all errors, related to this plugin to internal error log. By default is false</p>
         <p><span style="color: #00BFFF">[aam]</span><br/><br/>error_reporting = <span style="color: #BF4000">"true"</span></p>
     </div>
