--- a/view/html/admin_options.html
+++ b/view/html/admin_options.html
@@ -52,7 +52,7 @@
                                 </ul>
                                 <!-- ###MAIN_MENU_TAB### begin-->
                                 <div id="tabs-1">
-                                    <div class="helpbox postbox">
+                                    <div class="helpbox postbox main-menu-help">
                                         <div class="aacsprite aacsmicons aachelp"><span class="help1">###LABEL_172###</span></div>                                                      
                                             <a href="#" class="squarebutton reorganize-menu">###LABEL_12###</a>
                                         <br class="clear" />
@@ -93,8 +93,8 @@
                                             <a href="#" class="refresh-metagox-list squarebutton" >###LABEL_17###</a>                                            
                                         </div>
                                         <br class="clear" />
-                                        </div>
                                     <div id="progressbar"></div>
+                                        </div>
                                     <div class="metabox-accordion">
                                         <!-- ###METABOX_LIST_ITEM### begin-->
                                         <div>
@@ -401,7 +401,7 @@
                                     <a href="###reference_url###?width=800&TB_iframe=true" class="thickbox" id="cp-ref-trigger">
                                     <span class="aacsprite aacsmicons aachelp tooltip" alt="###LABEL_161###"><img title="configpress" rel="configpress" src="###site_url###/wp-content/plugins/advanced-access-manager/view/css/images/nothing.gif" /></span>
                                     </a>
-                                        <div class="mbox">
+                                        <div class="cbox">
                                         <span>###LABEL_157###</span>
                                         </div>
                                         <br class="clear" />                                
