git-svn-id: https://plugins.svn.wordpress.org/advanced-access-manager/trunk@552674 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/view/html/reference.html
+++ b/view/html/reference.html
@@ -19,6 +19,7 @@
                             <a href="#" link="multisite">multisite</a>
                             <ul>
                                 <li><a href="#" link="apply-all">apply_all</a></li>
+                                <li><a href="#" link="default-site">default_site</a></li>
                             </ul>
                         </li>
                         <li><a href="#" link="page-category">page_category</a></li>
@@ -130,6 +131,7 @@
     <div class="error-reporting">###LABEL_14###</div>
     <div class="multisite">###LABEL_15###</div>
     <div class="apply-all">###LABEL_16###</div>
+    <div class="default-site">###LABEL_38###</div>
     <div class="page-category">###LABEL_17###</div>
     <div class="license-key">###LABEL_18###</div>
     <div class="backend-section">###LABEL_19###</div>
