--- a/view/html/admin_options.html
+++ b/view/html/admin_options.html
@@ -89,7 +89,7 @@
                                       <span class="aacsprite aacsmicons aachelp tooltip" alt="###LABEL_14###"><img title="meta" rel="meta" src="###site_url###/wp-content/plugins/advanced-access-manager/view/css/images/nothing.gif" /></span>
                                         <div class="mbox">
                                             <input type="text" placeholder="###LABEL_15###" class="initialize-url-text" value="" />
-                                            <a href="#" class="initialize-url squarebutton" >###LABEL_16###</a>
+                                            <a href="#" class="initialize-url lilsqbutton" >###LABEL_16###</a>
                                             <a href="#" class="refresh-metagox-list squarebutton" >###LABEL_17###</a>                                            
                                         </div>
                                         <br class="clear" />
@@ -184,7 +184,7 @@
                                                     <label for="cap-###title###" title="###cap_name_full###" class="tooltip" alt="###description###">###cap_name###</label>
                                                 </div>
                                                 <!-- ###CAPABILITY_DELETE### begin-->
-                                                <div class="icon-delete" onclick="mObj.deleteCapability('###title###', '###cap_name###');"><span class="custom critical" rel="###LABEL_118###">!</span></div>
+                                                <div class="icon-delete" onclick="mObj.deleteCapability('###title###', '###cap_name###');"></div>
                                                 <!-- ###CAPABILITY_DELETE### end-->
                                             </div>
                                             <!-- ###CAPABILITY_ITEM### end-->
