--- a/view/css/wpaccess_style.css
+++ b/view/css/wpaccess_style.css
@@ -185,9 +185,10 @@ margin: 10px 0 0 15px;
     margin-bottom: 5px;
     float:left;
     font-size: 11px;
-    border: 1px solid #dfdfdf;
+    border:0;
     padding: 1px 0px 1px 3px;
     margin-left: 8px;
+    background: #F9F9F9;
     -moz-border-radius: 3px;
     border-radius: 3px;
 }
@@ -292,6 +293,8 @@ margin: 10px 0 0 15px;
 
 .capability-name{
     float:left;
+    margin-right: 8px;
+    margin-top: 5px;
 }
 
 .info{
@@ -524,9 +527,9 @@ div.tree-holder #sidetreecontrol a { color: #257DA6; }
 .aacsmicons { height: 30px;width: 25px;background-color: #efefef;border: 1px solid #bcbcbc; border-radius: 2px;
  } 
 .aachelp { background-position: -90px -50px; margin: 2px; }
-span.help1 { margin: 0 100px 0 35px;position: absolute;line-height: 115%; }
+span.help1 { margin: 0 105px 0 35px;position: absolute;line-height: 115%; }
 span.help2 { margin: 0 10px;position: absolute;line-height: 120%; }
-.aacback { background-position: -112px -48px;border: 1px solid #bcbcbc;;height: 30px;width: 30px;margin: 0;float: left;background-color: #fefefe;border-radius: 15px;box-shadow: 0 0 3px #DDDDDD;
+.aacback { background-position: -112px -48px;border: 1px solid #bcbcbc;;height: 30px;width: 30px;margin: 0;float: left;background-color: #efefef;border-radius: 15px;box-shadow: 0 0 3px #DDDDDD;
     -webkit-transition: border-color .218s;
     -moz-transition: border .218s;
     -o-transition: border-color .218s;
@@ -619,7 +622,6 @@ div a.lilsqbutton {
 }
 
 .tooltip {
-font-weight: bold;
 color: #434343;
 cursor: default;
 }
@@ -636,15 +638,16 @@ color: #434343;
 content: attr(alt);
 text-align: left;
 text-shadow: 0px 1px 0px rgb(253,253,253);
-width: 200px;
+width: 160px;
 background-color: rgb(240,240,240);
 background-image: -webkit-gradient(linear, left top, left bottom, from(rgb(245,245,245)), to(rgb(235,235,235)));
 background-image: -moz-linear-gradient(top,  rgb(245,245,245),  rgb(235,235,235));
 border: 1px solid rgb(210,210,210);
 position: absolute;
-top: 35px;
+top:15px;
 left: 0px;
-padding: 10px 12px 10px 12px;
+padding: 10px 15px 10px 15px;
+line-height: 16px;
 z-index: 99999999;
 -o-border-radius: 5px;
 -webkit-border-radius: 5px;
@@ -655,7 +658,18 @@ border-radius: 5px;
 -o-box-shadow: inset 0px 1px 0px rgb(252,252,252), 1px 1px 3px rgb(240,240,240), -1px 0px 3px rgb(240,240,240);
 box-shadow: inset 0px 1px 0px rgb(252,252,252), 1px 1px 3px rgb(240,240,240), -1px 0px 3px rgb(240,240,240);
 }
-
+label.tooltip {
+    border-radius: 2px;
+    box-shadow: 0 0 2px #898989 inset;
+    color: #555555;
+    display: block;
+    font-family: verdana,sans-serif;
+    height: 24px;
+    left: -4px;
+    line-height: 23px;
+    vertical-align: middle;
+    width: 235px;
+}
 .right { float: right; }
 #major-publishing-actions { padding: 8px 0 6px 8px; }
 #misc-publishing-actions { padding: 2px 0 20px 8px;color: #6888B8; }
@@ -681,3 +695,18 @@ h3 span { font-family: veranda, sans-serif; }
 #wpcontent option:hover { background: #eeeeee; }
 #new-role-ok { margin-left: 5px; } 
 #ajax-loading { padding-right: 4px; }
+.ui-widget-content div.ui-dialog-titlebar { 
+    background: none repeat scroll 0 0 #6A8BBC;
+    border: 1px solid #6A8BBD;
+    box-shadow: 0 0 2px #DDDDDD inset;
+    color: #FFFFFF;
+    letter-spacing: -0.04em;
+    margin: 2px;
+    text-shadow: 1px 1px 1px #676767;
+}
+.ui-dialog .ui-dialog-content div span {
+    color: #454545;
+    display: block;
+    line-height: 16px;
+    margin: 3px 3px 3px 6px;
+}
