--- a/view/html/admin_options.html
+++ b/view/html/admin_options.html
@@ -92,8 +92,8 @@
                                             <a href="#" class="initialize-url lilsqbutton" >###LABEL_16###</a>
                                             <a href="#" class="refresh-metagox-list squarebutton" >###LABEL_17###</a>                                            
                                         </div>
+                                                <div id="progressbar"></div>
                                         <br class="clear" />
-                                    <div id="progressbar"></div>
                                         </div>
                                     <div class="metabox-accordion">
                                         <!-- ###METABOX_LIST_ITEM### begin-->
@@ -179,8 +179,8 @@
                                         <div>
                                             <!-- ###CAPABILITY_ITEM### begin-->
                                             <div class="capability-item ###premium###">
-                                                <div class="capability-name">
-                                                    <input type="checkbox" id="cap-###title###" name="wpaccess[advance][###title###]" value="1" ###checked### />
+                                                <div>
+                                                    <input type="checkbox" id="cap-###title###" name="wpaccess[advance][###title###]" value="1" class="capability-name" ###checked### />
                                                     <label for="cap-###title###" title="###cap_name_full###" class="tooltip" alt="###description###">###cap_name###</label>
                                                 </div>
                                                 <!-- ###CAPABILITY_DELETE### begin-->
@@ -295,8 +295,8 @@
                                                 <tfoot>
                                                     <tr>
                                                         <td colspan="3">
-                                                            <a href="#" class="lilsqbutton restore-postinfo" title="###LABEL_171###">###LABEL_170###</a>&nbsp;
-                                                            <a href="#" class="squarebutton save-postinfo" title="###LABEL_59###">###LABEL_60###</a>&nbsp;
+                                                            <a href="#" class="lilsqbutton restore-postinfo" title="###LABEL_171###">###LABEL_170###</a>
+                                                            <a href="#" class="squarebutton save-postinfo" title="###LABEL_59###">###LABEL_60###</a>
                                                             <a href="#" class="squarebutton save-postinfo-all" title="###LABEL_61###">###LABEL_62###</a>
                                                         </td>
                                                     </tr>
